[package]
name = "tokio-task-supv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.22"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0.1", features = ["full", "sync"] } # "rt", "time", "sync", "net"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.35"
static_init = "1.0.2"
thiserror = "1.0.31"

tokio-task-supv-macros = { version = "0.1.0", path = "./crates/macros" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rand = "0.8.5"

[workspace]
