[package]
name = "tokio-task-supv-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
heck = "0.4.0"
indexmap = "1.9"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
strum = { version = "0.24", features = ["derive"] }
syn = { version = "1.0", features = ["full", "extra-traits"] }
